--- a/style.css
+++ b/style.css
@@ -6,3 +6,12 @@
 #image{
     width: 100%;
 }
+.travel_maindiv{
+    border: 1px solid lightgray;
+}
+.travel_maindiv img{
+    width: 100%;
+}
+.travel_maindiv h5,p{
+    margin: 20px;
+}
