--- a/style.css
+++ b/style.css
@@ -15,3 +15,15 @@
 .travel_maindiv h5,p{
     margin: 20px;
 }
+.movies_head{
+    font-size: 20px;
+    padding: 6px 20px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+.movies_head i{
+    float: right;
+}
+.ac_text span{
+    color: orange;
+}
